<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:orientation="vertical">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/uploadTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_margin="12dp"
                android:textColor="@color/black"
                android:text="@string/enter_details_and_uplode_documents"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent">

            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pancardTIL"
                android:layout_margin="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/uploadTV"
                >
                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/pancardTV"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:hint="@string/enter_pancard_number"
                    android:fontFamily="monospace"/>


            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/adharcardTIL"
                android:layout_margin="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pancardTV"
                >
                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/adharcardTV"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:hint="@string/enter_adharcard_number"
                    android:fontFamily="monospace"/>
            </com.google.android.material.textfield.TextInputLayout>


            <ImageView
                android:id="@+id/panIMG"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginLeft="125dp"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/ic_baseline_add_photo_alternate_24"/>

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/PanProgress"/>

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/uplode_pancard"
                    android:id="@+id/pancardBT"
                    android:layout_marginTop="15dp">


                </Button>

                <ImageView
                    android:id="@+id/aadharIMG"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="125dp"
                    android:layout_marginTop="20dp"
                    app:srcCompat="@drawable/ic_baseline_add_photo_alternate_24"/>
                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/aadharProgress"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/uplode_aadhar_card"
                    android:id="@+id/aadharBT"
                    android:layout_marginTop="15dp">

                </Button>
                <ImageView
                    android:id="@+id/electricityIMG"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginLeft="125dp"
                    android:layout_marginTop="20dp"
                    app:srcCompat="@drawable/ic_baseline_add_photo_alternate_24"/>

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/electricityProgress"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/uplode_electricity_bill"
                    android:id="@+id/electricityBT"
                    android:layout_marginTop="15dp">

                </Button>
                <ImageView
                    android:id="@+id/voterIMG"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="125dp"
                    android:layout_marginTop="20dp"
                    app:srcCompat="@drawable/ic_baseline_add_photo_alternate_24"/>
            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/voterProgress"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/uplode_voter_id"
                    android:id="@+id/voterBT"
                    android:layout_marginTop="15dp">

                </Button>
                <ImageView
                    android:id="@+id/passportIMG"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="125dp"
                    android:layout_marginTop="20dp"
                    app:srcCompat="@drawable/ic_baseline_add_photo_alternate_24"/>

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/passportProgress"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/uplode_passport"
                    android:id="@+id/passportBT"
                    android:layout_marginTop="15dp">

                </Button>









        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>